add browser unit tests

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "main": "lib/index.js",
   "scripts": {
     "postversion": "git push && git push --tags && npm publish --access=public",
-    "example": "budo ./example/index.js --live --open --dir ./example"
+    "example": "budo ./example/index.js --live --open --dir ./example",
+    "test": "hihat test/index.js --no-devtool --print --frame 0,0,0,500 | tap-spec"
   },
   "dependencies": {
     "@f/animate": "^1.0.1"
@@ -16,6 +17,9 @@
     "@f/to-array": "^1.1.1",
     "budo": "^8.0.4",
     "eases": "^1.0.8",
+    "hihat": "^2.6.4",
+    "tap-dev-tool": "^1.3.0",
+    "tap-spec": "^4.1.1",
     "tape": "^4.2.2"
   }
 }
