--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,13 @@ language: node_js
 node_js:
   - "4"
   - "5"
-sudo: false
-script: "make test"
+script:
+  - npm run test:headless
+addons:
+  apt:
+    packages:
+      - xvfb
+install:
+  - export DISPLAY=':99.0'
+  - Xvfb :99 -screen 0 1024x768x24 > /dev/null 2>&1 &
+  - npm install
